# roq-phemex-futures

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore  CMakeLists.txt
conda/: meta.yaml
share/: config.toml
share/flags/prod/: flags.cfg
share/flags/test/: flags.cfg
share/flags/vip/: flags.cfg
src/roq/bitget/: .gitignore  CMakeLists.txt  TODO  account.cpp  account.hpp  api.cpp  api.hpp  (+27 more)
src/roq/phemex/json/: .gitignore  CMakeLists.txt  account.json  account_assets.json  account_assets_data.json  account_assets_data_assets_item.json  account_data_item.json  account_data_item_coin_item.json  account_info.json  account_info_data.json  account_info_data_coin_config_item.json  account_info_data_symbol_config_item.json  account_mode.json  account_positions.json  account_positions_data.json  account_positions_data_account.json  account_positions_data_positions_item.json  accounts_orders_positions.json  accounts_orders_positions_accounts_item.json  accounts_orders_positions_orders_item.json  accounts_orders_positions_positions_item.json  ack.json  ack_error.json  ack_result.json  ack_result_status.json  action.json  arg.json  asset_mode.json  book.json  book_data.json  book_data_item.json  books.json  books_data.json  books_item.json  cancel_all_orders_ack.json  cancel_all_orders_ack_data.json  cancel_all_orders_ack_data_list_item.json  cancel_order_ack.json  cancel_order_ack_data.json  category.json  (+83 more)
src/roq/phemex_futures/: .gitignore  CMakeLists.txt  README.md  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.hpp  config.cpp  config.hpp  drop_copy.cpp  drop_copy.hpp  drop_copy_coin_m.cpp  drop_copy_coin_m.hpp  drop_copy_usd_m.cpp  drop_copy_usd_m.hpp  gateway.cpp  gateway.hpp  index.rst  live-coin-m.sh  live-usd-m.sh  main.cpp  market_data.cpp  market_data.hpp  market_data_coin_m.cpp  market_data_coin_m.hpp  market_data_usd_m.cpp  market_data_usd_m.hpp  order_entry.cpp  order_entry.hpp  order_entry_coin_m.cpp  order_entry_coin_m.hpp  order_entry_state.hpp  order_entry_state.json  order_entry_usd_m.cpp  order_entry_usd_m.hpp  rest.cpp  rest.hpp  rest_coin_m.cpp  (+10 more)
src/roq/phemex_futures/fix_bridge/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  config.hpp  live-usd-m.sh  main.cpp  settings.cpp  settings.hpp
src/roq/phemex_futures/flags/: .gitignore  CMakeLists.txt  flags.json  misc.json  rest.json  settings.cpp  settings.hpp  ws.json
src/roq/phemex_futures/gateway/: CMakeLists.txt  account.cpp  account.hpp  api.cpp  api.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  drop_copy.hpp  drop_copy_coin_m.cpp  drop_copy_coin_m.hpp  drop_copy_usd_m.cpp  drop_copy_usd_m.hpp  market_data.hpp  market_data_coin_m.cpp  market_data_coin_m.hpp  market_data_usd_m.cpp  market_data_usd_m.hpp  order_entry.hpp  order_entry_coin_m.cpp  order_entry_coin_m.hpp  order_entry_usd_m.cpp  order_entry_usd_m.hpp  rest.hpp  rest_coin_m.cpp  rest_coin_m.hpp  rest_usd_m.cpp  rest_usd_m.hpp  settings.hpp  shared.cpp  shared.hpp
src/roq/phemex_futures/json/: .gitignore  CMakeLists.txt  account_assets.json  account_assets_data.json  account_assets_data_assets_item.json  account_mode.json  account_positions.json  account_positions_data.json  account_positions_data_account.json  account_positions_data_positions_item.json  accounts_orders_positions.json  accounts_orders_positions2.json  accounts_orders_positions2_accounts_item.json  accounts_orders_positions2_orders_item.json  accounts_orders_positions2_positions_item.json  accounts_orders_positions_accounts_item.json  accounts_orders_positions_orders_item.json  accounts_orders_positions_positions_item.json  ack.json  ack_error.json  ack_result.json  ack_result_status.json  action.json  arg.json  asset_mode.json  book.json  book_data.json  book_data_item.json  cancel_all_orders_ack.json  cancel_all_orders_ack2.json  cancel_all_orders_ack_data.json  cancel_all_orders_ack_data_list_item.json  cancel_order_ack.json  cancel_order_ack2.json  cancel_order_ack2_data.json  cancel_order_ack_data.json  category.json  category_ws.json  delivery_period.json  encoder.cpp  (+108 more)
src/roq/phemex_futures/protocol/json/: .gitignore  CMakeLists.txt  accounts_orders_positions.json  accounts_orders_positions2.json  accounts_orders_positions2_accounts_item.json  accounts_orders_positions2_orders_item.json  accounts_orders_positions2_positions_item.json  accounts_orders_positions_accounts_item.json  accounts_orders_positions_orders_item.json  accounts_orders_positions_positions_item.json  ack.json  ack_error.json  ack_result.json  ack_result_status.json  action.json  book.json  book_data.json  book_data_item.json  encoder.cpp  encoder.hpp  event.json  event_type.json  exec_inst.json  exec_status.json  index_market24h.json  index_market24h_data.json  kline.json  kline2.json  kline2_data_item.json  kline_data_item.json  liq_status.json  liquidity_ind.json  map.cpp  map.hpp  margin_mode.json  market24h.json  market24h2.json  market24h2_data.json  market24h_data.json  message_field.json  (+48 more)
src/roq/phemex_futures/tools/: CMakeLists.txt  crypto.cpp  crypto.hpp  currency.hpp  security.hpp
test/: .gitignore  CMakeLists.txt  README.md  TODO  json_account.cpp  json_account_assets.cpp  json_account_info.cpp  json_account_positions.cpp  json_accounts_orders_positions.cpp  json_accounts_orders_positions_2.cpp  json_book.cpp  json_books.cpp  json_cancel_all_orders.cpp  json_cancel_all_orders_ack.cpp  json_cancel_order.cpp  json_cancel_order_ack.cpp  json_cancel_order_ack_2.cpp  json_fill.cpp  json_fill_history.cpp  json_index_market24h.cpp  json_instruments.cpp  json_kline.cpp  json_kline_2.cpp  json_market24h.cpp  json_market24h_2.cpp  json_message.cpp  json_modify_order.cpp  json_modify_order_ack.cpp  json_modify_order_ack_2.cpp  json_open_orders.cpp  json_order.cpp  json_orderbook.cpp  json_orders_cancel_ack.cpp  json_orders_cancel_ack_2.cpp  json_orders_create_ack.cpp  json_orders_create_ack_2.cpp  json_orders_replace_ack.cpp  json_orders_replace_ack_2.cpp  json_place_order.cpp  json_place_order_ack.cpp  (+11 more)
(+132 files in other folders)
