set(TARGET_NAME "${PROJECT_NAME}")

add_subdirectory(flags)

set(SOURCES
    account.cpp
    api.cpp
    application.cpp
    config.cpp
    drop_copy_coin_m.cpp
    drop_copy_usd_m.cpp
    gateway.cpp
    market_data_coin_m.cpp
    market_data_usd_m.cpp
    order_entry_coin_m.cpp
    order_entry_usd_m.cpp
    rest_coin_m.cpp
    rest_usd_m.cpp
    settings.cpp
    shared.cpp
    main.cpp)

add_subdirectory("json")
add_subdirectory("tools")

include(RoqAutogen)

roq_gitignore(OUTPUT .gitignore SOURCES "${TARGET_NAME}")

add_executable("${TARGET_NAME}" ${SOURCES})

add_dependencies("${TARGET_NAME}" autogen-json-headers)

target_link_libraries(
  "${TARGET_NAME}"
  PRIVATE "${PROJECT_NAME}-json"
          "${PROJECT_NAME}-tools"
          "${PROJECT_NAME}-flags"
          roq-api::roq-api
          roq-core::roq-core
          roq-codec::roq-codec
          roq-flags::roq-flags
          roq-io::roq-io
          roq-logging::roq-logging
          roq-logging::roq-logging-flags
          roq-server::roq-server
          roq-server::roq-server-flags
          roq-utils::roq-utils
          roq-web::roq-web
          fmt::fmt
          unordered_dense::unordered_dense
          ${UUID_LIBRARIES})

set_target_properties("${TARGET_NAME}" PROPERTIES LINK_FLAGS_RELEASE -s)

target_compile_definitions(
  "${TARGET_NAME}" PRIVATE ROQ_PACKAGE_NAME="${TARGET_NAME}" ROQ_HOST="${ROQ_HOST}" ROQ_BUILD_VERSION="${GIT_REPO_VERSION}"
                           ROQ_GIT_DESCRIBE_HASH="${GIT_DESCRIBE_HASH}" ROQ_BUILD_NUMBER="${ROQ_BUILD_NUMBER}" ROQ_BUILD_TYPE="${ROQ_BUILD_TYPE}")

install(TARGETS ${TARGET_NAME})

if(BUILD_DOCS)

  install(
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
    DESTINATION ${CMAKE_INSTALL_DATADIR}/doc/${PROJECT_NAME}
    FILES_MATCHING
    PATTERN "*.rst*"
    PATTERN "CMakeFiles" EXCLUDE)

endif()
